crates/daemon/tests/snapshots/project_env_reconciliation__latest_resource_track_fails_before_state_or_dotenv_writes.snap
---
source: crates/daemon/tests/project_env_reconciliation.rs
expression: snapshot
---
(
    [
        Object {
            "job_id": String("job_000001"),
            "message": String("job accepted"),
            "protocol_version": Number(1),
            "status": String("accepted"),
            "type": String("response"),
        },
        Object {
            "job_id": String("job_000001"),
            "kind": String("reconcile"),
            "scope": String("project:<project_id>"),
            "type": String("job_started"),
        },
        Object {
            "job_id": String("job_000001"),
            "message": String("Project env reconciliation started"),
            "type": String("log"),
        },
        Object {
            "error": String("Project `<project_id>` resource `mysql` uses `latest`, but daemon reconciliation has no default-track resolver wired"),
            "job_id": String("job_000001"),
            "type": String("job_failed"),
        },
    ],
    None,
    [],
    [],
    Some(
        ProjectEnvObservedStateRecord {
            project_id: "<project_id>",
            status: Failed,
            message: Some(
                "Project `<project_id>` resource `mysql` uses `latest`, but daemon reconciliation has no default-track resolver wired",
            ),
            observed_at: "<timestamp>",
            warnings: [],
        },
    ),
    JobRecord {
        id: "job_000001",
        kind: "reconcile",
        scope: "project:<project_id>",
        status: Failed,
        started_at: "<timestamp>",
        finished_at: Some(
            "<timestamp>",
        ),
        summary: None,
        error: Some(
            "Project `<project_id>` resource `mysql` uses `latest`, but daemon reconciliation has no default-track resolver wired",
        ),
    },
)
